[d3-chart] added visual regression tests

--- a/semcore/d3-chart/package.json
+++ b/semcore/d3-chart/package.json
@@ -42,6 +42,11 @@
     "@semcore/jest-preset-ui": "1.0.0",
     "@types/d3-array": "^3.0.2",
     "@types/d3-scale": "^4.0.2",
-    "@types/d3-transition": "^3.0.1"
+    "@types/d3-transition": "^3.0.1",
+    "@semcore/typography": "*",
+    "@semcore/dropdown-menu": "*",
+    "@semcore/button": "*",
+    "@semcore/checkbox": "*",
+    "@semcore/icon": "*"
   }
 }
