--- a/tools/jest-preset-ui/package.json
+++ b/tools/jest-preset-ui/package.json
@@ -8,14 +8,15 @@
   "private": true,
   "dependencies": {
     "@semcore/babel-preset-ui": "*",
+    "@testing-library/jest-dom": "5.11.3",
     "@testing-library/react": "11.2.2",
     "babel-jest": "24.8.0",
     "babel-plugin-transform-import-meta": "2.1.1",
     "dotenv": "8.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest-axe": "4.1.0",
-    "jest-image-snapshot": "2.9.0",
-    "@testing-library/jest-dom": "5.11.3"
+    "jest-canvas-mock": "2.4.0",
+    "jest-image-snapshot": "2.9.0"
   },
   "devDependencies": {
     "@types/jest-axe": "3.5.1"
