--- a/.github/workflows/slack-pr-notify.yml
+++ b/.github/workflows/slack-pr-notify.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # https://securitylab.github.com/research/github-actions-untrusted-input/#Remediation
-      PR_TITLE: ${{ github.event.issue.title }}
+      PR_TITLE: ${{ github.event.pull_request.title }}
       PR_AUTHOR: ${{ github.event.pull_request.user.login }}
       PR_URL: ${{ github.event.pull_request.html_url }}
     steps:
