--- a/semcore/radio/package.json
+++ b/semcore/radio/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "@semcore/utils": "^3.15",
-    "@semcore/flex-box": "^4"
+    "@semcore/flex-box": "^4",
+    "@semcore/typography": "^3"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
