[ci] Added gpg key import for commits signature

--- a/.github/workflows/release-pull-request.yml
+++ b/.github/workflows/release-pull-request.yml
@@ -48,6 +48,12 @@ jobs:
           currentSemcoreUiVersion="$(cat semcore/ui/package.json | jq -r .version)"
           echo "release_pr_name=release-after-$currentSemcoreUiVersion" >> $GITHUB_ENV
           echo "release_branch_name=release/after-$currentSemcoreUiVersion" >> $GITHUB_ENV
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v4.4.0
+        with:
+          gpg_private_key: ${{ secrets.BOT_ACCOUNT_GPG_PRIVATE_KEY }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
       - name: Github auth
         run: |
           git config --global user.name 'semrush-ci-whale'
