--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -52,6 +52,12 @@ jobs:
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: yarn build
+      - name: Import GPG key
+        uses: crazy-max/ghaction-import-gpg@v4.4.0
+        with:
+          gpg_private_key: ${{ secrets.BOT_ACCOUNT_GPG_PRIVATE_KEY }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
       - name: Github auth
         run: |
           git config --global user.name 'semrush-ci-whale'
