--- a/.github/workflows/release-pull-request.yml
+++ b/.github/workflows/release-pull-request.yml
@@ -87,7 +87,7 @@ jobs:
           yarn update-release-changelog
           git add semcore/ui/CHANGELOG.md
           git add semcore/ui/package.json
-          git commit -m "[chore] Automatically updated @semcore/ui changelog"
+          git commit -S -m "[chore] Automatically updated @semcore/ui changelog"
         if: env.release_branch_already_exists != 'true'
       - name: edit changelog change commit in the release branch
         run: |
@@ -97,7 +97,7 @@ jobs:
           yarn update-release-changelog
           git add semcore/ui/CHANGELOG.md
           git add semcore/ui/package.json
-          git commit -m "[chore] Automatically updated @semcore/ui changelog"
+          git commit -S -m "[chore] Automatically updated @semcore/ui changelog"
           [[ "${{ env.firstCommitHash }}" = "${{ env.lastCommitHash }}" ]] || git cherry-pick "${{ env.secondCommitHash }}^..${{ env.lastCommitHash }}" --strategy-option theirs --allow-empty
           git branch -m "${{ env.release_branch_name }}" "${{ env.temporaryBranch }}-to-be-deleted"
           git branch -D "${{ env.temporaryBranch }}-to-be-deleted"
