--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -52,16 +52,14 @@ jobs:
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: yarn build
-      - name: Import GPG key
+      - name: Github GPG Auth
         uses: crazy-max/ghaction-import-gpg@v4.4.0
         with:
           gpg_private_key: ${{ secrets.BOT_ACCOUNT_GPG_PRIVATE_KEY }}
+          git_user_signingkey: true
           git_commit_gpgsign: true
-      - name: Github auth
-        run: |
-          git config --global user.name 'semrush-ci-whale'
-          git config --global user.email 'semrush-ci-whale@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.BOT_ACCOUNT_GITHUB_TOKEN }}@github.com/semrush/intergalactic
+          git_committer_name: semrush-ci-whale
+          git_committer_email: semrush-ci-whale@users.noreply.github.com
       - name: NPM setup
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ".npmrc"
