--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
+  "packageManager": "pnpm@7.0.0",
   "scripts": {
-    "start": "yarn playground",
-    "build": "yarn build:icons && yarn build:illustration && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
-    "build:icons": "yarn workspace @semcore/icon build",
-    "build:illustration": "yarn workspace @semcore/illustration build",
+    "start": "pnpm playground",
+    "build": "pnpm build:icons && pnpm build:illustration && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
+    "build:icons": "pnpm workspace @semcore/icon build",
+    "build:illustration": "pnpm workspace @semcore/illustration build",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
-    "prebuild": "rm -rf semcore/**/lib && yarn prebuild:icon && yarn prebuild:illustration",
-    "prebuild:icon": "yarn workspace @semcore/icon prebuild",
-    "prebuild:illustration": "yarn workspace @semcore/illustration prebuild",
+    "prebuild": "rm -rf semcore/**/lib && pnpm prebuild:icon && pnpm prebuild:illustration",
+    "prebuild:icon": "pnpm workspace @semcore/icon prebuild",
+    "prebuild:illustration": "pnpm workspace @semcore/illustration prebuild",
     "test": "jest --no-cache",
     "vo-test:setup": "npx @guidepup/setup",
     "vo-test": "playwright test",
-    "playground": "yarn workspace @semcore/playground start",
-    "website": "yarn --cwd website start",
+    "playground": "pnpm workspace @semcore/playground start",
+    "website": "pnpm --cwd website start",
     "coverage": "jest --no-cache --coverage",
     "pub": "super-publisher --root ./semcore",
     "lint:es": "eslint -c .eslintrc --ext .ts,.tsx,.js,.jsx ./semcore",
     "lint:ts": "tsc --project tsconfig.json --noEmit",
-    "lint": "yarn lint:ts && yarn lint:es",
+    "lint": "pnpm lint:ts && pnpm lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
     "preinstall": "node ./.ci/update-workspaces-list",
     "publish:website": "tsm --require=./.ci/tsm-filter-warnings.js ./.ci/trigger-website-publish.ts",
@@ -53,7 +54,7 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-no-cyrillic-string": "1.0.5",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "7.29.4",
     "eslint-plugin-ssr-friendly": "1.1.0",
     "execa": "6.1.0",
     "husky": "8.0.0",
