--- a/.github/workflows/release-pull-request.yml
+++ b/.github/workflows/release-pull-request.yml
@@ -13,6 +13,9 @@ jobs:
       should_run: ${{ steps.should_run.outputs.should_run }}
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - name: print latest_commit
         run: echo ${{ github.sha }}
 
@@ -30,6 +33,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Cache node modules
         uses: actions/cache@v2
@@ -39,10 +45,10 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
-        run: yarn --non-interactive --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       - name: generate release pull request name
         run: |
           currentSemcoreUiVersion="$(cat semcore/ui/package.json | jq -r .version)"
@@ -87,7 +93,7 @@ jobs:
         if: env.release_branch_already_exists == 'true'
       - name: commit changelog change as a first commit in the release branch
         run: |
-          yarn update-release-changelog
+          pnpm update-release-changelog
           git add semcore/ui/CHANGELOG.md
           git add semcore/ui/package.json
           git commit -S -m "[chore] Automatically updated @semcore/ui changelog"
@@ -97,7 +103,7 @@ jobs:
           git checkout "${{ env.firstCommitHash }}"
           git checkout HEAD^1
           git checkout -b "${{ env.temporaryBranch }}"
-          yarn update-release-changelog
+          pnpm update-release-changelog
           git add semcore/ui/CHANGELOG.md
           git add semcore/ui/package.json
           git commit -S -m "[chore] Automatically updated @semcore/ui changelog"
