--- a/.github/workflows/slack-updates-pre-broadcast.yml
+++ b/.github/workflows/slack-updates-pre-broadcast.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Cache node modules
         uses: actions/cache@v2
@@ -19,16 +22,19 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
-        run: yarn --non-interactive --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
   slack-updates-pre-broadcast:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -37,9 +43,9 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Notification
         env:
           SLACK_API_ENDPOINTS: ${{ secrets.SLACK_WEBHOOK_URL_DEV }}
         run: |
-          yarn slack-updates-broadcast
+          pnpm slack-updates-broadcast
