--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Cache node modules
         uses: actions/cache@v2
@@ -18,18 +21,21 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
           cd website
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
   build:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -38,7 +44,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Cache build
         uses: actions/cache@v2
         id: cache-build
@@ -46,20 +52,21 @@ jobs:
           path: |
             **/lib
             semcore/icon/**/*.js
-            semcore/icon/**/*.mjs
             semcore/icon/**/*.d.ts
-            semcore/illustration/**/*.js
-            semcore/illustration/**/*.mjs
-            semcore/illustration/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
-        run: yarn build
+        run: |
+          pnpm install --frozen-lockfile
+          pnpm build
   lint:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -68,7 +75,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Restore cache build
         uses: actions/cache@v2
         with:
@@ -80,14 +87,17 @@ jobs:
             semcore/illustration/**/*.js
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -96,7 +106,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Restore cache build
         uses: actions/cache@v2
         with:
@@ -108,11 +118,11 @@ jobs:
             semcore/illustration/**/*.js
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Test
         env:
           SCREENSHOT_URL: ${{ secrets.SCREENSHOT_URL }}
-        run: yarn coverage
+        run: pnpm coverage
 
   vo-setup:
     runs-on: macos-latest
@@ -127,18 +137,21 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
           cd website
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
   vo-build-icons:
     runs-on: macos-latest
     needs: vo-setup
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -147,7 +160,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules--${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules--${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Cache build
         uses: actions/cache@v2
         id: cache-build
@@ -159,10 +172,10 @@ jobs:
             semcore/illustration/**/*.js
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
-          key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
+          key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
-        run: yarn && yarn build:icons
+        run: pnpm run build:icons
   vo-test:
     runs-on: macos-latest
     needs:
@@ -170,6 +183,9 @@ jobs:
       - vo-build-icons
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -178,7 +194,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules--${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules--${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Restore icons build cache
         uses: actions/cache@v2
         with:
@@ -189,13 +205,13 @@ jobs:
             semcore/illustration/**/*.js
             semcore/illustration/**/*.mjs
             semcore/illustration/**/*.d.ts
-          key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'yarn.lock') }}
+          key: build-icons-${{ hashFiles('semcore/icon', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Install Browser
         run: npx playwright install webkit
       - name: Enable VoiceOver Automation
         uses: guidepup/setup-action@0.4.0
       - name: Voice Over testing
-        run: CI_RUN=true yarn vo-test
+        run: CI_RUN=true pnpm run vo-test
       - name: Github GPG Auth
         uses: crazy-max/ghaction-import-gpg@v4.4.0
         with:
