--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Cache node modules
         uses: actions/cache@v2
@@ -18,18 +21,21 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
           cd website
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
   build:
     runs-on: ubuntu-latest
     needs: setup
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -38,7 +44,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Сache build
         uses: actions/cache@v2
         id: cache-build
@@ -47,15 +53,20 @@ jobs:
             **/lib
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
-        run: yarn build
+        run: |
+          pnpm install --frozen-lockfile
+          pnpm build
   lint:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -64,7 +75,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Restore cache build
         uses: actions/cache@v2
         with:
@@ -72,14 +83,17 @@ jobs:
             **/lib
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -88,7 +102,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Restore cache build
         uses: actions/cache@v2
         with:
@@ -96,10 +110,10 @@ jobs:
             **/lib
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Test
         env:
           SCREENSHOT_URL: ${{ secrets.SCREENSHOT_URL }}
-        run: yarn coverage
+        run: pnpm coverage
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
