--- a/.github/workflows/publish-components.yml
+++ b/.github/workflows/publish-components.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Cache node modules
         uses: actions/cache@v2
@@ -16,13 +19,13 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Install dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: |
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
           cd website
-          yarn --non-interactive --frozen-lockfile
+          pnpm install --frozen-lockfile
   publish-components:
     runs-on: ubuntu-latest
     needs: setup
@@ -31,6 +34,9 @@ jobs:
       SCREENSHOT_URL: ${{ secrets.SCREENSHOT_URL }}
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.1.0
+        with:
+          version: 7.0.0
       - uses: actions/setup-node@v2
       - name: Restore cache node modules
         uses: actions/cache@v2
@@ -39,7 +45,7 @@ jobs:
             node_modules
             */*/node_modules
             website/node_modules
-          key: modules-${{ runner.os }}-${{ hashFiles('yarn.lock') }}--${{ hashFiles('website/yarn.lock') }}
+          key: modules-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}--${{ hashFiles('website/pnpm-lock.yaml') }}
       - name: Сache build
         uses: actions/cache@v2
         id: cache-build
@@ -48,10 +54,12 @@ jobs:
             **/lib
             semcore/icon/**/*.js
             semcore/icon/**/*.d.ts
-          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'yarn.lock') }}
+          key: build-${{ hashFiles('semcore/**', 'tools/**', 'tsconfig.json', 'pnpm-lock.yaml') }}
       - name: Build
         if: steps.cache-build.outputs.cache-hit != 'true'
-        run: yarn build
+        run: |
+          pnpm install --frozen-lockfile
+          pnpm build
       - name: Github GPG Auth
         uses: crazy-max/ghaction-import-gpg@v4.4.0
         with:
@@ -64,8 +72,8 @@ jobs:
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> ".npmrc"
       - name: Lint
-        run: yarn lint
+        run: pnpm lint
       - name: Test
-        run: yarn test
+        run: pnpm test
       - name: Delivery
-        run: yarn continuous-delivery
+        run: pnpm continuous-delivery
