--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
+  "packageManager": "pnpm@7.0.0",
   "scripts": {
-    "start": "yarn playground",
+    "start": "pnpm playground",
     "build": "lerna run build --scope @semcore/icon && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && find semcore/icon/. -type d -maxdepth 1 | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf || true",
     "test": "jest --no-cache",
-    "playground": "yarn workspace @semcore/playground start",
+    "playground": "pnpm workspace @semcore/playground start",
     "coverage": "jest --no-cache --coverage",
-    "analyze": "yarn workspace @semcore/analyzer start",
+    "analyze": "pnpm workspace @semcore/analyzer start",
     "pub": "super-publisher --root ./semcore",
     "lint:es": "eslint -c .eslintrc --ext .ts,.tsx,.js,.jsx ./semcore",
     "lint:ts": "tsc --project tsconfig.json --noEmit",
-    "lint": "yarn lint:ts & yarn lint:es",
+    "lint": "pnpm lint:ts & pnpm lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
-    "preinstall": "node ./ci/update-workspaces-list"
+    "preinstall": "node ./ci/update-workspaces-list",
+    "prepare": "husky install"
   },
   "private": true,
   "workspace-sources": {
@@ -40,9 +42,9 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-no-cyrillic-string": "1.0.5",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "7.29.4",
     "eslint-plugin-ssr-friendly": "1.1.0",
-    "husky": "3.0.0",
+    "husky": "8.0.0",
     "jest": "26.6.3",
     "lerna": "4.0.0",
     "lint-staged": "10.2.9",
@@ -50,18 +52,10 @@
     "prettier": "2.6.2",
     "pretty-quick": "1.11.1",
     "tsm": "2.2.1",
-    "typescript": "4.5.5",
-    "typescript-plugin-css-modules": "2.2.0",
-    "typescript-workspace-plugin": "2.0.1"
+    "typescript": "4.5.5"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn prettier:fix && lint-staged",
-      "commit-msg": "tsm ./ci/lint-commit-message.ts $HUSKY_GIT_PARAMS"
-    }
   },
   "lint-staged": {
     "*.tsx": "./node_modules/.bin/eslint --fix"
@@ -162,5 +156,8 @@
     "tools/shadow-loader",
     "tools/slack-integration",
     "tools/super-publisher"
-  ]
+  ],
+  "dependencies": {
+    "typescript-plugin-css-modules": "^3.4.0"
+  }
 }
