--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -2,25 +2,25 @@ substitutions:
   _APP_VERSION: 0.0.1
 steps:
   - name: node:16
-    entrypoint: yarn
-    args: ['--non-interactive', '--frozen-lockfile']
+    entrypoint: pnpm
+    args: ['install', '--frozen-lockfile']
   - name: node:16
-    entrypoint: yarn
+    entrypoint: pnpm
     args: ['build']
   - name: node:16
-    entrypoint: yarn
-    args: ['--non-interactive', '--frozen-lockfile', '--cwd', 'website']
+    entrypoint: pnpm
+    args: ['install', '--frozen-lockfile', '--cwd', 'website']
   - name: node:16
-    entrypoint: yarn
+    entrypoint: pnpm
     args: ['--cwd', 'website', 'build:client']
   - name: node:16
-    entrypoint: yarn
+    entrypoint: pnpm
     args: ['--cwd', 'website', 'build:server']
   - name: node:16
-    entrypoint: yarn
+    entrypoint: pnpm
     args: ['--cwd', 'website', 'build:interface']
   - name: node:16
-    entrypoint: yarn
+    entrypoint: pnpm
     args: ['--cwd', 'website', 'lint:md']
   - name: 'ubuntu'
     entrypoint: 'bash'
