--- a/semcore/side-panel/package.json
+++ b/semcore/side-panel/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@semcore/side-panel",
   "description": "SEMRush SidePanel Component",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "main": "lib/cjs/index.js",
   "module": "lib/es6/index.js",
   "typings": "lib/types/index.d.ts",
@@ -17,6 +17,7 @@
     "@semcore/animation": "^1",
     "@semcore/flex-box": "^4",
     "@semcore/portal": "^2",
+    "@semcore/typography": "^3",
     "@semcore/outside-click": "^2",
     "@semcore/icon": "^2.16",
     "react-focus-lock": "2.3.1"
