--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "prettier/@typescript-eslint",
+    "prettier",
     "plugin:import/typescript",
     "plugin:import/warnings",
     "plugin:import/errors",
