--- a/tools/gcs-upload/package.json
+++ b/tools/gcs-upload/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@google-cloud/storage": "5.19.2",
     "fs-extra": "10.0.1",
-    "minimist": "1.2.6"
+    "mri": "1.2.0"
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
