[global] Synced dependencies versions to remove duplicates in the single export package.

--- a/semcore/feedback-form/package.json
+++ b/semcore/feedback-form/package.json
@@ -37,5 +37,10 @@
   },
   "devDependencies": {
     "@semcore/jest-preset-ui": "1.0.0"
+  },
+  "overrides": {
+    "final-form": {
+      "@babel/runtime": "7.17.9"
+    }
   }
 }
