--- a/package.json
+++ b/package.json
@@ -162,5 +162,8 @@
     "tools/shadow-loader",
     "tools/slack-integration",
     "tools/super-publisher"
-  ]
+  ],
+  "resolutions": {
+    "@types/react/csstype": "3.0.8"
+  }
 }
