--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:ts": "tsc --project tsconfig.json --noEmit",
     "lint": "yarn lint:ts & yarn lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
-    "preinstall": "node ./ci/update-workspaces-list"
+    "preinstall": "node ./.ci/update-workspaces-list"
   },
   "private": true,
   "workspace-sources": {
@@ -60,7 +60,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "yarn prettier:fix && lint-staged",
-      "commit-msg": "tsm ./ci/lint-commit-message.ts $HUSKY_GIT_PARAMS"
+      "commit-msg": "tsm ./.ci/lint-commit-message.ts $HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
