--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "yarn playground",
-    "build": "lerna run build --scope @semcore/icon && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
+    "build": "yarn build:icons && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
+    "build:icons": "lerna run build --scope @semcore/icon",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && find semcore/icon/. -type d -maxdepth 1 | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf || true",
     "test": "jest --no-cache",
