--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -1,9 +1,12 @@
 substitutions:
-  _APP_VERSION: 0.0.1
+  _APP_VERSION: 0.0.2
 steps:
   - name: node:16
     entrypoint: yarn
     args: ['--non-interactive', '--frozen-lockfile']
+  - name: node:16
+    entrypoint: yarn
+    args: ['build:icons']
   - name: node:16
     entrypoint: yarn
     args: ['--non-interactive', '--frozen-lockfile', '--cwd', 'website']
