--- a/website/package.json
+++ b/website/package.json
@@ -49,9 +49,9 @@
     "@types/supertest": "2.0.8",
     "convert-layout": "0.11.1",
     "esbuild": "0.14.29",
-    "esbuild-plugin-alias": "^0.2.1",
+    "esbuild-plugin-alias": "0.2.1",
     "esbuild-plugin-css-modules": "0.1.3",
-    "fast-glob": "^3.2.11",
+    "fast-glob": "3.2.11",
     "hast-util-to-html": "8.0.3",
     "mdast": "3.0.0",
     "mdast-util-from-markdown": "1.2.0",
@@ -59,7 +59,7 @@
     "mdast-util-to-hast": "12.1.1",
     "micromark-extension-gfm": "2.0.1",
     "node-watch": "0.7.3",
-    "tsm": "^2.2.1",
+    "tsm": "2.2.1",
     "typescript": "4.1.3",
     "unified": "10.1.2"
   },
