--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "pub": "super-publisher --root ./semcore",
     "lint:es": "eslint -c .eslintrc --ext .ts,.tsx,.js,.jsx ./semcore",
     "lint:ts": "tsc --project tsconfig.json --noEmit",
-    "lint": "yarn lint:ts & yarn lint:es",
+    "lint": "yarn lint:ts && yarn lint:es",
     "prettier:fix": "pretty-quick --staged --ignore-path=./.prettierignore",
     "preinstall": "node ./.ci/update-workspaces-list"
   },
