[builder] fixed typings

--- a/tools/builder/tsconfig.json
+++ b/tools/builder/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "module": "esnext",
+    "target": "esnext"
+  },
   "extends": "../../tsconfig.json",
-  "include": ["src", "lib"]
+  "include": ["src", "lib", "bin"]
 }
