--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -14,6 +14,8 @@ steps:
     entrypoint: yarn
     args: ['deploy']
     dir: 'website'
+    env:
+      - 'GCLOUD_SECRET=$_GCLOUD_SECRET'
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
