--- a/website/cloudbuild.yaml
+++ b/website/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args: ['--non-interactive', '--frozen-lockfile']
   - name: node:16
     entrypoint: yarn
-    args: ['build:icons']
+    args: ['build']
   - name: node:16
     entrypoint: yarn
     args: ['--non-interactive', '--frozen-lockfile', '--cwd', 'website']
