[website] replaced fantastic static uploading with light docker proxy to heavy docker containers with all static inside cause google cloud storage responses with 403 to multiple proxied requests (from developer.semrush.com -> i.semrsh.com -> static.semrush.com)

--- a/website2/cloudbuild.yaml
+++ b/website2/cloudbuild.yaml
@@ -6,16 +6,14 @@ steps:
     args: ['--non-interactive', '--frozen-lockfile']
   - name: node:16
     entrypoint: yarn
-    args: ['build']
+    args: ['build:icons']
   - name: node:16
     entrypoint: yarn
     args: ['--non-interactive', '--frozen-lockfile', '--cwd', 'website']
   - name: node:16
     entrypoint: yarn
-    args: ['deploy']
+    args: ['build']
     dir: 'website'
-    env:
-      - 'GCLOUD_SECRET=$_GCLOUD_SECRET'
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
