--- a/website2/Dockerfile
+++ b/website2/Dockerfile
@@ -1,3 +1,8 @@
+# ###
+# Dev instance start:
+# docker build -t intergalactic-site . &&  docker rm intergalactic-site ; docker run -p 8080:8080 --name intergalactic-site intergalactic-site
+# ###
+
 FROM nginx:stable-alpine
 RUN apk add --no-cache bash
 RUN apk add --no-cache python2 g++ make
@@ -11,13 +16,13 @@ RUN chmod +x ./docker-entrypoint.sh
 COPY ./server ./server
 COPY ./dist ./dist 
 
-COPY ./package.json ./package.json
-COPY ./yarn.lock ./yarn.lock
+COPY ./server/package.json ./package.json
+COPY ./server/yarn.lock ./yarn.lock
 RUN yarn install --production --silent --non-interactive --frozen-lockfile
 
+COPY ./dist /app/static
+
 COPY ./nginx.conf /etc/nginx/nginx.conf
-RUN cat /etc/nginx/nginx.conf | sed "s/%PACKAGE_VERSION%/$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[ \",]//g')/g" > /etc/nginx/nginx.conf
-RUN cat /etc/nginx/nginx.conf
 
 EXPOSE 8080
 
