--- a/website2/nginx.conf
+++ b/website2/nginx.conf
@@ -5,8 +5,6 @@ http {
     sendfile on;
 
     server {
-        set $static_path ui-kit/intergalactic-documentation/%PACKAGE_VERSION%/static;
-
         listen 8080;
         listen [::]:8080;
 
@@ -16,34 +14,20 @@ http {
         server_name _;
         server_tokens off;
 
+        root /app/static;
+        index index.html;
+
         location /api/ {
           proxy_pass  http://localhost:3001/;
         }
         location /intergalactic/api/ {
           proxy_pass  http://localhost:3001/;
         }
-        location = / {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-        location = /intergalactic {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-        location = /intergalactic/ {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-        location ~ (\.) {
-          rewrite /intergalactic/(.*) /$1  break;
-          proxy_pass https://static.semrush.com/${static_path}${uri};
-        }
         location / {
-          rewrite    /(.+) /$static_path/$1index.html break;
-          proxy_pass https://static.semrush.com/;
-          proxy_intercept_errors on;
-          error_page 404 /error_page;
+          rewrite /intergalactic/(.*) /$1  break;
         }
-        location /error_page {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
+
+        error_page 404 /index.html;
     }
     
 }
