--- a/website2/package.json
+++ b/website2/package.json
@@ -7,15 +7,13 @@
   "scripts": {
     "start": "yarn dev",
     "dev": "WATCH_TYPES=true tsm ./builder/dev-server.ts",
-    "build": "NODE_ENV=production tsm ./builder/ssr.ts --reset-cache",
-    "deploy": "PUBLIC_PATH=/intergalactic/ yarn build && DEPLOYMENT_DIR=static tsm ./deploy.ts",
+    "build": "PUBLIC_PATH=/intergalactic/ NODE_ENV=production tsm ./builder/ssr.ts --reset-cache",
     "upload-search-index": "tsm ./searchIndexUpload.ts"
   },
   "dependencies": {
     "algoliasearch": "4.8.4",
     "dayjs": "1.10.4",
     "dotenv": "8.2.0",
-    "express": "4.17.3",
     "glob": "7.1.6",
     "lz-string": "1.4.4",
     "normalize.css": "8.0.1",
