[website] fixed static files hosting

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -15,13 +15,15 @@ http {
         server_tokens off;
 
         root /app/static;
-        index index.html;
 
         location /api/ {
           proxy_pass  http://localhost:3001/;
         }
         location /intergalactic/api/ {
           proxy_pass  http://localhost:3001/;
+        }
+        location /intergalactic/assets {
+          alias /app/static/intergalactic/assets;
         }
         location / {
           rewrite /intergalactic/(.*) /$1  break;
