[website] added static files url fallback

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -22,6 +22,9 @@ http {
         location /intergalactic/api/ {
           proxy_pass  http://localhost:3001/;
         }
+        location /assets {
+          alias /app/static/intergalactic/assets;
+        }
         location /intergalactic/assets {
           alias /app/static/intergalactic/assets;
         }
