--- a/semcore/notice/package.json
+++ b/semcore/notice/package.json
@@ -16,7 +16,8 @@
     "@semcore/animation": "^1",
     "@semcore/utils": "^3.15",
     "@semcore/flex-box": "^4",
-    "@semcore/icon": "^2.16"
+    "@semcore/icon": "^2.16",
+    "@semcore/notice-global": "^1"
   },
   "peerDependencies": {
     "@semcore/core": "^1.11",
