--- a/semcore/ui/components.json
+++ b/semcore/ui/components.json
@@ -41,6 +41,7 @@
     "@semcore/modal",
     "@semcore/neighbor-location",
     "@semcore/notice",
+    "@semcore/notice-global",
     "@semcore/notice-bubble",
     "@semcore/outside-click",
     "@semcore/pagination",
