--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "semcore/typography",
     "semcore/utils",
     "semcore/widget-empty",
+    "semcore/wizard",
     "tools/babel-plugin-react-semcore",
     "tools/babel-plugin-recharts",
     "tools/babel-plugin-root",
