--- a/semcore/illustration/package.json
+++ b/semcore/illustration/package.json
@@ -10,5 +10,13 @@
   "scripts": {
     "transform": "icon-transform-svg",
     "build": "npm run transform -- --configFile=transform-svg.config.js"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.17.9",
+    "@semcore/flex-box": "^4"
+  },
+  "peerDependencies": {
+    "@semcore/core": "^1.11",
+    "react": "16.8 - 17"
   }
 }
