--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "yarn build:icons && lerna run build --scope @semcore/* --ignore @semcore/icon,@semcore/ui",
     "build:icons": "lerna run build --scope @semcore/icon",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
-    "prebuild": "rm -rf semcore/**/lib && find semcore/icon/. -type d -maxdepth 1 | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf || true",
+    "prebuild": "rm -rf semcore/**/lib && yarn prebuild:icon && yarn prebuild:illustration",
+    "prebuild:icon": "find semcore/icon/. -type d -maxdepth 1 | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf || true",
+    "prebuild:illustration": "find semcore/illustration/. -type d -maxdepth 1 | egrep -v \"__tests__|svg\" | xargs rm -rf || true",
     "test": "jest --no-cache",
     "playground": "yarn workspace @semcore/playground start",
     "website": "yarn --cwd website start",
