--- a/semcore/icon/package.json
+++ b/semcore/icon/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "parsing": "icon-transform-svg parsing",
-    "transform": "icon-transform-svg --sourceFolder=svg-new --outputFolder=.",
+    "transform": "icon-transform-svg --sourceFolder=svg-new --outputFolder=. --babel-env=commonjs",
     "transform:old-icon": "icon-transform-svg --sourceFolder=svg --outputFolder=lib --babel-env=commonjs --deprecated-warning",
     "build": "build --source=js && npm run transform:old-icon && npm run transform",
     "test": "jest"
