--- a/semcore/icon/package.json
+++ b/semcore/icon/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "parsing": "icon-transform-svg parsing",
     "transform": "icon-transform-svg",
-    "build": "build --source=js && npm run transform -- --sourceFolder=svg-new && npm run transform -- --outputFolder=lib",
+    "build": "build --source=js && npm run transform -- --configFile=transform-svg-new.config.js && npm run transform -- --configFile=transform-svg.config.js",
     "test": "jest"
   },
   "dependencies": {
