[wizard] added tests and a11y

--- a/semcore/wizard/package.json
+++ b/semcore/wizard/package.json
@@ -21,5 +21,8 @@
   },
   "jest": {
     "preset": "@semcore/jest-preset-ui"
+  },
+  "devDependencies": {
+    "@semcore/jest-preset-ui": "1.0.0"
   }
 }
