--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build:icons": "lerna run build --scope @semcore/icon",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && yarn prebuild:icon && yarn prebuild:illustration",
-    "prebuild:icon": "find semcore/icon/. -type d -maxdepth 1 | egrep -v \"__tests__|src|svg|svg-new\" | xargs rm -rf || true",
-    "prebuild:illustration": "find semcore/illustration/. -type d -maxdepth 1 | egrep -v \"__tests__|svg\" | xargs rm -rf || true",
+    "prebuild:icon": "cd semcore/icon && yarn prebuild",
+    "prebuild:illustration": "cd semcore/illustration && yarn prebuild",
     "test": "jest --no-cache",
     "playground": "yarn workspace @semcore/playground start",
     "website": "yarn --cwd website start",
