--- a/semcore/illustration/package.json
+++ b/semcore/illustration/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "scripts": {
     "transform": "icon-transform-svg",
-    "build": "npm run transform -- --configFile=transform-svg.config.js"
+    "build": "npm run transform -- --configFile=transform-svg.config.js && cp svg/* ./",
+    "prebuild": "ls -d */ | egrep -v \"__tests__|svg\" | xargs rm -rf && rm *.svg || true"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.9",
