[email] fixed non-working package

--- a/semcore/email/posthtml-src.config.json
+++ b/semcore/email/posthtml-src.config.json
@@ -1,7 +1,7 @@
 {
   "root": "src",
   "input": "**/*.html",
-  "output": ".tmp-src",
+  "output": ".tmp",
   "plugins": {
     "posthtml-extend": {
       "encoding": "utf8",
