--- a/semcore/email/posthtml-lib.config.json
+++ b/semcore/email/posthtml-lib.config.json
@@ -1,7 +1,7 @@
 {
   "root": ".tmp",
   "input": "**/*.html",
-  "output": ".tmp-lib",
+  "output": ".tmp",
   "plugins": {
     "posthtml-inline-assets": {},
     "posthtml-inline-css": {}
