[icon-transform-svg] Optimization parse svg
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build:icons": "lerna run build --scope @semcore/icon",
     "typecheck": "lerna exec --scope @semcore/* -- tsc --noEmit",
     "prebuild": "rm -rf semcore/**/lib && yarn prebuild:icon && yarn prebuild:illustration",
-    "prebuild:icon": "cd semcore/icon && yarn prebuild",
-    "prebuild:illustration": "cd semcore/illustration && yarn prebuild",
+    "prebuild:icon": "yarn workspace @semcore/icon prebuild",
+    "prebuild:illustration": "yarn workspace @semcore/illustration prebuild",
     "test": "jest --no-cache",
     "playground": "yarn workspace @semcore/playground start",
     "website": "yarn --cwd website start",
