[illustration,icon] added generate react components and refactor generation svg
* [illustration] added generate react components

* [icon-transform-svg] added tests

* [illustration] fixed types and gitignore files

* [icon-transform-svg] added prettierignore file

* [icon-transform-svg] cleaned up code (lite refactoring only)

* [icon, illustration] moved prebuild scripts from root to packages, also fixed illustration svg files backward capability

* [icon-transform-svg] Optimization parse svg

Signed-off-by: r.lysov <r.lysov@semrush.com>

* [illustration] add dev deps

Signed-off-by: r.lysov <r.lysov@semrush.com>

* [illustration] Add new version

Signed-off-by: r.lysov <r.lysov@semrush.com>

* [illustration] added generate react components

* [icon-transform-svg] added tests

* [icon-transform-svg] cleaned up code (lite refactoring only)

* [illustration] Remove copy svg to root component

Signed-off-by: r.lysov <r.lysov@semrush.com>

* [icon] Fix build

Signed-off-by: r.lysov <r.lysov@semrush.com>

Co-authored-by: Mikhail Sereniti <phytonmk@gmail.com>
Co-authored-by: r.lysov <r.lysov@semrush.com>

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,11 @@ Icon[
 semcore/icon/**/*.mjs
 semcore/icon/**/*.js
 !semcore/icon/src/**/*.js
+!semcore/icon/**/*.config.js
 semcore/icon/**/*.d.ts
 !semcore/icon/src/**/*.d.ts
+
+# Illustration
+semcore/illustration/**/*.js
+!semcore/illustration/**/*.config.js
+semcore/illustration/**/*.d.ts
