[chore] Add ext for pre-commit script
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     }
   },
   "lint-staged": {
-    "*.tsx": "./node_modules/.bin/eslint --fix"
+    "*.{ts,tsx,js,jsx}": "eslint --fix"
   },
   "workspaces": [
     "semcore/accordion",
