[website] ngnix-based redirect from i.semrush.com

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -16,6 +16,10 @@ http {
 
         root /app/static;
 
+        if ($http_host = 'i.semrush.com') {
+          return 301    https://developer.semrush.com/intergalactic$request_uri;
+        }
+
         location /api/ {
           proxy_pass  http://localhost:3001/;
         }
