[chore] change author for all components
Signed-off-by: r.lysov <r.lysov@semrush.com>

--- a/semcore/chart/package.json
+++ b/semcore/chart/package.json
@@ -20,7 +20,7 @@
     "lib/*/Tooltip/index.js",
     "lib/*/copyChart.js"
   ],
-  "author": "Roman Lysov <r.lysov@semrush.com>",
+  "author": "UI-kit team <ui-kit-team@semrush.com>",
   "license": "MIT",
   "scripts": {
     "build": "build",
