Revert "[website] moved static files from nginx to google cloud storage"
This reverts commit f1170cc1858e0dd5bc484cd704c1005d7a570fea.

--- a/website/nginx.conf
+++ b/website/nginx.conf
@@ -5,8 +5,6 @@ http {
     sendfile on;
 
     server {
-        set $static_path ui-kit/intergalactic-documentation/%PACKAGE_VERSION%/static;
-
         listen 8080;
         listen [::]:8080;
 
@@ -15,6 +13,8 @@ http {
 
         server_name _;
         server_tokens off;
+
+        root /app/static;
 
         if ($http_host = 'i.semrush.com') {
           return 301    https://developer.semrush.com/intergalactic$request_uri;
@@ -26,30 +26,11 @@ http {
         location /intergalactic/api/ {
           proxy_pass  http://localhost:3001/;
         }
-
-        location = / {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-        location = /intergalactic {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-        location = /intergalactic/ {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-        
-        location ~ (\.) {
-          rewrite /intergalactic/(.*) /$1  break;
-          proxy_pass https://static.semrush.com/${static_path}${uri};
-        }
         location / {
-          rewrite    /(.+) /$static_path/$1index.html break;
-          proxy_pass https://static.semrush.com/;
-          proxy_intercept_errors on;
-          error_page 404 /error_page;
+          rewrite /intergalactic/(.*) /$1  break;
         }
-        location /error_page {
-          proxy_pass https://static.semrush.com/$static_path/index.html;
-        }
-    }
-}
 
+        error_page 404 /not-found/index.html;
+    }
+    
+}
