--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -3,26 +3,27 @@
 # docker build -t intergalactic-site . &&  docker rm intergalactic-site ; docker run -p 8080:8080 --name intergalactic-site intergalactic-site
 # ###
 
-FROM nginx:latest
-# // uncomment 3 lines below to enable api server
-# RUN apt-get update;
-# RUN apt-get install -y npm;
-# RUN npm install -g yarn;
+FROM nginx:stable-alpine
+RUN apk add --no-cache bash
+RUN apk add --no-cache python3 g++ make
+RUN apk add --update npm yarn
 
 WORKDIR /app
 
-# // uncomment 4 lines below to enable api server
-# COPY ./docker-entrypoint.sh ./docker-entrypoint.sh
-# RUN chmod +x ./docker-entrypoint.sh
-# COPY ./server ./server
-# RUN cd ./server && yarn install --production --silent --non-interactive --frozen-lockfile
+COPY ./docker-entrypoint.sh ./docker-entrypoint.sh
+RUN chmod +x ./docker-entrypoint.sh
+
+COPY ./server ./server
+COPY ./dist ./dist
+
+COPY ./server/package.json ./package.json
+COPY ./server/yarn.lock ./yarn.lock
+RUN yarn install --production --silent --non-interactive --frozen-lockfile
+
+COPY ./dist /app/static
 
 COPY ./nginx.conf /etc/nginx/nginx.conf
-COPY ./package.json ./package.json
-RUN cat /etc/nginx/nginx.conf | sed "s/%PACKAGE_VERSION%/$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[ \",]//g')/g" > /etc/nginx/nginx.conf
-RUN cat /etc/nginx/nginx.conf
 
 EXPOSE 8080
 
-# // uncomment 1 line below to enable api server
-# CMD ["./docker-entrypoint.sh"]
+CMD ["./docker-entrypoint.sh"]
