[color-picker] added new component color picker

--- a/semcore/ui/components.json
+++ b/semcore/ui/components.json
@@ -11,6 +11,7 @@
     "@semcore/carousel",
     "@semcore/chart",
     "@semcore/checkbox",
+    "@semcore/color-picker",
     "@semcore/core",
     "@semcore/counter",
     "@semcore/data-table",
